fix(frontend): align admin top bar zones for rtl and ltr

--- a/frontend/restaurant-ordering-web/src/app/core/layouts/profile-console-layout/profile-console-layout.scss
+++ b/frontend/restaurant-ordering-web/src/app/core/layouts/profile-console-layout/profile-console-layout.scss
@@ -30,7 +30,7 @@
   grid-template-columns: minmax(0, 1fr) auto;
   grid-template-rows: auto auto;
   grid-template-areas:
-    'header-start header-end'
+    'header-end header-start'
     'header-nav header-nav';
 }
 
@@ -57,6 +57,14 @@
   min-width: 0;
 }
 
+.profile-console[dir='ltr'] .profile-console__header-end {
+  justify-self: start;
+}
+
+.profile-console[dir='ltr'] .profile-console__header-start {
+  justify-self: end;
+}
+
 .profile-console[dir='rtl'] .profile-console__header-start {
   justify-self: end;
 }
@@ -72,13 +80,6 @@
     grid-template-areas: none;
   }
 
-  .profile-console__header-start {
-    grid-area: auto;
-    grid-row: 1;
-    grid-column: 1;
-    justify-self: start;
-  }
-
   .profile-console__header-nav {
     grid-area: auto;
     grid-row: 1;
@@ -88,14 +89,23 @@
     max-width: 100%;
   }
 
-  .profile-console__header-end {
+  .profile-console[dir='ltr'] .profile-console__header-start {
     grid-area: auto;
     grid-row: 1;
     grid-column: 3;
     justify-self: end;
   }
 
+  .profile-console[dir='ltr'] .profile-console__header-end {
+    grid-area: auto;
+    grid-row: 1;
+    grid-column: 1;
+    justify-self: start;
+  }
+
   .profile-console[dir='rtl'] .profile-console__header-start {
+    grid-area: auto;
+    grid-row: 1;
     grid-column: 3;
     justify-self: end;
   }
@@ -105,6 +115,8 @@
   }
 
   .profile-console[dir='rtl'] .profile-console__header-end {
+    grid-area: auto;
+    grid-row: 1;
     grid-column: 1;
     justify-self: start;
   }
